# nixnote2

./: .travis.yml  CMakeLists.txt  nixnote2.pro
development/: create-build-version.sh
src/: nixnote.cpp
src/communication/: communicationerror.cpp  communicationerror.h  communicationmanager.cpp  communicationmanager.h
src/qevercloud/: !README-nixnote2.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml
src/qevercloud/QEverCloud/: CMakeLists.txt
src/qevercloud/QEverCloud/cmake/modules/: QEverCloudSetupQt.cmake
src/qevercloud/QEverCloud/headers/: Globals.h  InkNoteImageDownloader.h  OAuth.h  RequestContext.h  VersionInfo.h  VersionInfo.h.in  oauth.h  thumbnail.h
src/qevercloud/QEverCloud/src/: AsyncResult.cpp  AsyncResult_p.cpp  AsyncResult_p.h  Globals.cpp  Http.cpp  Http.h  InkNoteImageDownloader.cpp  OAuth.cpp  RequestContext.cpp  Thumbnail.cpp  globals.cpp  http.cpp  oauth.cpp
src/qevercloud/QEverCloud/src/tests/: SocketHelpers.cpp  SocketHelpers.h  TestQEverCloud.cpp
src/qevercloud/docs/: CodingStyle.md  Migration_notes_4_to_5.md
src/sql/: notebooktable.cpp  searchtable.cpp  sharednotebooktable.cpp  usertable.cpp
src/threads/: syncrunner.cpp
src/utilities/: debugtool.cpp
src/xml/: exportdata.cpp
